ONM-5865: Fix navbar-filters css bug on safari

--- a/public/assets/src/opennemas-webarch/less/components/_navbar-filters.less
+++ b/public/assets/src/opennemas-webarch/less/components/_navbar-filters.less
@@ -12,6 +12,7 @@
 
   .input-group {
     max-width: 0;
+    max-width: -webkit-fit-content;
 
     input,
     input:focus,
@@ -24,6 +25,7 @@
     .input-group-addon {
       border-color: transparent;
       background-color: transparent;
+      width: -webkit-fit-content;
 
       .fa {
         vertical-align: 0;
